--- a/src/components/product/slideshow/slideshow.css
+++ b/src/components/product/slideshow/slideshow.css
@@ -1,6 +1,4 @@
-
 .swiper-slide {
-  
   /* Center slide text vertically */
   display: flex;
 }
@@ -8,14 +6,13 @@
 .swiper-slide img {
   display: block;
   width: 100%;
-  height: 100%;
+  height: 30%;
   object-fit: cover;
 }
 
-
 .swiper {
-  width: 100%;
-  height: 900px;
+  width: 1000px;
+  height: 850px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -24,7 +21,6 @@
   background-size: cover;
   background-position: center;
 }
-
 
 .mySwiper {
   height: 20%;
